# HealthMate.Api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONSTITUTION.md  CONTRIBUTING.md  HealthMate.sln  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: api-ci.yml  ml-ci.yml
deploy/: nginx.conf
docs/fhir/: extensions.md
services/ml/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml
services/ml/app/: config.py  main.py  registry.py  security.py
services/ml/app/models/anemia/: README.md  evaluate.py  predictor.py  router.py  schemas.py  train.py
services/ml/app/models/anemia/tests/: test_predictor.py  test_router.py
services/ml/app/schemas/: common.py
services/ml/artifacts/anemia/v0/: metadata.json  model.pkl
services/ml/tests/: test_health.py  test_models_listing.py
src/HealthMate.Api/: Dockerfile  HealthMate.Api.csproj  HealthMate.http  Program.cs  appsettings.Development.json  appsettings.json
src/HealthMate.Api/Controllers/: AccountController.cs  AdminController.cs  BodySiteController.cs  ConditionController.cs  DiseaseController.cs  DocumentController.cs  EDEngine.cs  (+16 more)
src/HealthMate.Application/: DependencyInjection.cs  HealthMate.Application.csproj
src/HealthMate.Domain/: README.md
src/HealthMate.Fhir/: DependencyInjection.cs  HealthMate.Fhir.csproj  README.md
src/HealthMate.Infrastructure/: DependencyInjection.cs  HealthMate.Infrastructure.csproj
src/HealthMate.Sina/: DependencyInjection.cs  HealthMate.Sina.csproj
tests/HealthMate.Tests/: HealthMate.Tests.csproj
(+558 files in other folders)
