[project]
name = "healthmate-ml"
version = "0.1.0"
description = "HealthMate ML inference sidecar"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "scikit-learn==1.5.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "joblib>=1.4,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "T20"]
# B008: FastAPI's Depends() pattern legitimately uses callables in defaults.
# S101: assert is fine in tests.
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S106", "S105"]
"**/test_*.py" = ["S101", "S106", "S105"]
"conftest.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
